<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true"
    android:background="@color/lime_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.RegisterActivity"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/register_title"
            android:textColor="@color/brown_black"
            android:textSize="36sp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/first_name_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name_label" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/last_name_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name_input" />

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name_label" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/email_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name_input" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_example_label"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <TextView
            android:id="@+id/phone_num_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/phone_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input" />

        <EditText
            android:id="@+id/phone_num_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number_example_label"
            android:inputType="phone"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_num_label" />

        <TextView
            android:id="@+id/country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/country_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_num_input" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_spinner_dropdown"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_label" />

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/city_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_spinner" />

        <EditText
            android:id="@+id/city_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawablePadding="12dp"
            android:hint="@string/city_example_label"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_label" />

        <TextView
            android:id="@+id/street_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/street_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_input" />

        <EditText
            android:id="@+id/street_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawablePadding="12dp"
            android:hint="@string/street_example_label"
            android:inputType="text"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/street_label" />


        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/gender_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/street_input" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_label">

            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_regular"
                android:text="@string/gender_btn_male_title"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_regular"
                android:text="@string/gender_btn_female_title"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/other_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_regular"
                android:text="@string/gender_btn_other_title"
                android:textSize="20sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/password_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_radio_group" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label" />

        <TextView
            android:id="@+id/confirm_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:text="@string/confirm_password_input_title"
            android:textColor="@color/brown_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_txt_input_rounded"
            android:backgroundTint="@color/main_green"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ibm_plex_sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_label" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input" />

        <Button
            android:id="@+id/upload_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/accent_green"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/upload_photo_btn_title"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/accent_green"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:text="@string/register_btn_title"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="32dp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_image_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
