<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="@color/lime_white"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="36sp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:text="@string/email_input_title"
        android:textColor="@color/brown_black"
        android:textSize="32sp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_txt_input_rounded"
        android:backgroundTint="@color/main_green"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/email_example_label"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ibm_plex_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:text="@string/password_input_title"
        android:textColor="@color/brown_black"
        android:textSize="32sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_txt_input_rounded"
        android:backgroundTint="@color/main_green"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ibm_plex_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/accent_green"
        android:paddingHorizontal="16dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/forgot_password_btn_title"
        android:textAllCaps="false"
        android:textColor="@color/brown_black"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/accent_green"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/login_btn_title"
        android:textAllCaps="false"
        android:textColor="@color/brown_black"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
