<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/login_title"
        android:id="@+id/login_navbar_item"
        android:icon="@drawable/ic_user_profile" />
    <item
        android:title="@string/register_title"
        android:id="@+id/register_navbar_item"
        android:icon="@drawable/ic_user_profile" />

    <!-- USER -->
    <item
        android:id="@+id/nav_order_ride"
        android:title="Order Ride"
         />

    <item
        android:id="@+id/nav_order_from_favorites"
        android:title="Order From Favorites"
        />
    <item
        android:title="@string/drivers_ride_history"
        android:icon="@drawable/ic_calendar"
        android:id="@+id/driver_ride_history_item"/>

    <item
        android:id="@+id/nav_route_estimation"
        android:icon="@drawable/ic_route"
        android:title="Estimate Route" />

    <item
        android:id="@+id/user_active_rides"
        android:title="Active rides"/>
    <item
        android:title="Active ride"
        android:id="@+id/driver_active_ride"
    />
    <item
        android:title="Live Support"
        android:id="@+id/live_support"
        />

    <item
        android:title="Admin Feed"
        android:id="@+id/admin_feed"
        />

    <item
        android:title="Manage Users"
        android:id="@+id/admin_manage_users"
        />

    <item
        android:title="Active Rides"
        android:id="@+id/admin_active_rides"
        />

    <item
        android:id="@+id/nav_panic_feed"
        android:title="Panic Feed"
        android:visible="false" />

    <item
        android:id="@+id/ride_history"
        android:title="Ride History"
        android:visible="false" />

    <item
        android:title="Add Driver"
        android:id="@+id/admin_add_driver"
        />

    <item
        android:title="Profile Requests"
        android:id="@+id/admin_profile_requests"
        />

    <item
        android:title="Pricelist"
        android:id="@+id/admin_pricelist"
        />

    <item
        android:title="Chat"
        android:id="@+id/admin_chat"
        />

    <item
        android:title="Reports"
        android:id="@+id/admin_reports"
        />


    <group android:id="@+id/nav_footer" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_status_switch"
            android:title="Status"
            app:actionViewClass="android.widget.Switch"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />
    </group>

</menu>